src/test/resources/examples/failing/springer-06.t
https://www.springer.com/computer/theoretical+computer+science/book/978-3-540-65410-0

Book
@Book{,
  author =    {Nielson, Flemming and Nielson, Hanne R. and Hankin, Chris},
  title =        {Principles of Program Analysis},
  publisher =    {TODO},
  year =         {1999},
  OPTkey =       {},
  OPTvolume =    {},
  OPTnumber =    {},
  OPTseries =    {},
  OPTaddress =   {},
  edition =   {1st},
  OPTmonth =     {},
  OPTnote =      {},
  OPTannote =    {},
  isbn = {978-3-540-65410-0},
}
